--- a/default.project.json
+++ b/default.project.json
@@ -5,12 +5,7 @@
 
     "ReplicatedStorage": {
       "$className": "ReplicatedStorage",
-      "$path": "src/ReplicatedStorage"
-    },
-
-    "ServerScriptService": {
-      "$className": "ServerScriptService",
-      "$path": "src/ServerScriptService"
+      "$path": "src"
     }
   }
 }
